--- a/index.html
+++ b/index.html
@@ -3,9 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serenity</title>
+    <!-- Sample website:-  https://preview.themeforest.net/item/serenity-wedding-organizer-elementor-template-kit/full_screen_preview/57894318?_ga=2.149505718.1623785259.1746079720-1259582090.1743512135-->
+    <!-- favicon icon -->
+     <link rel="shortcut icon" href="assests/images/navbar/wedding-rings.png" type="image/png">
+    <!-- fonts -->
+     <link rel="stylesheet" href="assests/css/offline-font.css">
+    <!-- webfonts -->
+     <link rel="stylesheet" href="assests/css/all.min.css">
+    <!-- stylesheet -->
+     <link rel="stylesheet" href="assests/css/index.css">
+    <!-- media query -->
+     <link rel="stylesheet" href="assests/css/media.css">
+    <title>Serenity | Wedding Organizers</title>
 </head>
 <body>
-    
+    <header>
+        <div class="nav-bar">
+            <div class="container">
+                <div class="row items-center justify-between">
+                    <div class="col-3 col-xl-4 col-md-5 col-sm-6 col-xs-8">
+                        <img src="assests/images/navbar/Group-15-1.png" alt="logo">
+                    </div>
+                    <div class="col-6 col-xl-7 col-lg-8 col-md-4">
+                        <nav>
+                            <ul class="items-center justify-end">
+                                <li class="display-md-none"><a href="#">Home</a></li>
+                                <li class="display-md-none"><a href="#">About Us</a></li>
+                                <li class="display-md-none"><a href="#">Service</a></li>
+                                <li class="dropdown display-md-none"><a href="#">Pages<i class="fa-solid fa-angle-down"></i></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#">Team</a></li>
+                                        <li><a href="#">Project</a></li>
+                                        <li><a href="#">Pricing</a></li>
+                                        <li><a href="#">Testimonial</a></li>
+                                        <li><a href="#">FAQ's</a></li>
+                                        <li><a href="#">Blog</a></li>
+                                    </ul>
+                                </li>
+                                <li class="display-xxl-none display-xl-none display-md-block"><a href="#">
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    <div class="line"></div>
+                                    </a>
+                                </li>
+                                <li class="display-sm-none"><a href="#"><div class="nav-btn">Contact Us</div></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section class="hero">
+            <div class="container">
+                <div class="row items-center">
+                    <div class="col-4">
+                        <div class="title">
+                            <h2>Moments Are Framed with Love Grace</h2>
+                        </div>
+                        <p>Turning your dream wedding into reality with flawless planning, elegant design, and unforgettable moments—crafted with love, care, and detail.</p>
+                        <div class="btn">
+                            <a href="#">Plan With Serenity <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                        <h4>More Than 16K+ Join Us:</h4>
+                        <div class="avatar-group">
+                            <img src="assests/images/hero/11.jpg" alt="Wedding 1" class="avatar">
+                            <img src="assests/images/hero/12.jpg" alt="Wedding 2" class="avatar">
+                            <img src="assests/images/hero/13.jpg" alt="Wedding 3" class="avatar">
+                            <div class="avatar-add"><a href="#">+</a></div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="frame">
+                            <img src="assests/images/hero/1.jpg" alt="Wedding Couple" class="couple-photo"/>
+                            <div class="circle">
+                            <div class="circle-button">
+                                <div class="arrow">→</div>
+                                <svg viewBox="0 0 200 200">
+                                  <defs>
+                                    <path id="circlePath" d="M 100, 100 m -75, 0 a 75,75 0 1,1 150,0 a 75,75 0 1,1 -150,0" />
+                                  </defs>
+                                  <text>
+                                    <textPath href="#circlePath" startOffset="0%">
+                                      CRAFTED WITH HEART FOR YOUR SPECIAL DAY CRAFT
+                                    </textPath>
+                                  </text>
+                                </svg>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="short-gallery">
+                            <h4>Short Gallery : </h4>
+                            <p>Capturing timeless moments, where love and memories beautifully unite forever.</p>
+                            <div class="row">
+                                <div class="col-6 g-img">
+                                    <img src="assests/images/hero/21.jpg" alt="Gallery Image 1">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                                <div class="col-6 g-img">
+                                    <img src="assests/images/hero/22.jpg" alt="Gallery Image 2">
+                                    <i class="fa-solid fa-arrow-right"></i>
+                                </div>
+                            </div>
+                            <div class="hero-rating">
+                                <ul>
+                                    <li><i class="fa-solid fa-star"></i></li>
+                                    <li><i class="fa-solid fa-star"></i></li>
+                                    <li><i class="fa-solid fa-star"></i></li>
+                                    <li><i class="fa-solid fa-star"></i></li>
+                                    <li><i class="fa-regular fa-star-half-stroke"></i></li>
+                                    <li>(4.65/5)</li>
+                                </ul>
+                            </div>
+                            <div class="hastag">
+                                <span>#Bridal Planning</span>
+                                <span>#Dekor</span>
+                                <span>#Styling</span>
+                                <span>#Vanue</span>
+                                <span>#Dream Planning</span>
+                                <span>#Photography</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row hero-bottom">
+
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
